added initial commit for f8-m-p